// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppEditTabs should match a snapshot for the ac integration tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              AgencyCloud Integration
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-ac-inegrated"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            AgencyCloud Integration
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-ac-inegrated"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the app listing tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="supportEmail"
              placeholder="Email for customers to contact you"
              type="email"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Support email
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="telephone"
              placeholder="Number for customers to contact you"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Telephone
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Home page
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="launchUri"
              placeholder="HTTPS or HTTP only for localhost"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Launch URI
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Terms and Conditions
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Privacy Policy
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="videoUrl1"
              placeholder="Video embed url instructing users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              How To Use Video Url
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="videoUrl2"
              placeholder="Video embed url marketing your app"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Marketing Video Url
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Pricing Info
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="isFree"
              type="checkbox"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              This application is free
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        />
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Summary
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Description
          </label>
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Icon Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
              >
                Dimensions: 96px x 96px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Featured Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
              >
                Dimensions: 495px x 222px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Name
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="supportEmail"
            placeholder="Email for customers to contact you"
            type="email"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Support email
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="telephone"
            placeholder="Number for customers to contact you"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Telephone
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Home page
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="launchUri"
            placeholder="HTTPS or HTTP only for localhost"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Launch URI
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Terms and Conditions
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Privacy Policy
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="videoUrl1"
            placeholder="Video embed url instructing users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            How To Use Video Url
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="videoUrl2"
            placeholder="Video embed url marketing your app"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Marketing Video Url
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Pricing Info
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="isFree"
            type="checkbox"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            This application is free
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      />
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Summary
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <label
          class="e1nbkkrq-el-label"
        >
          Description
        </label>
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Icon Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
            >
              Dimensions: 96px x 96px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Featured Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
            >
              Dimensions: 495px x 222px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low eqfkc7t-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin elle7d2-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the authentication tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        When using the Reapit Connect
         
        <a>
          Authorization Code flow,
        </a>
         you need to register both a re-direct URI and a logout URI. The former is the location in your app, you want Reapit Connect to re-direct to after a successful user login, the latter, after a succesful logout. Only URIs that are registered here will be accepted as a location by Reapit Connect although, you can register multiple locations with a comma separated list.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="redirectUris"
              placeholder="Enter your Redirect URI(s)"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Redirect URI(s)
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="signoutUris"
              placeholder="Enter your Sign Out URI(s)"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Sign Out URI(s)
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      When using the Reapit Connect
       
      <a>
        Authorization Code flow,
      </a>
       you need to register both a re-direct URI and a logout URI. The former is the location in your app, you want Reapit Connect to re-direct to after a successful user login, the latter, after a succesful logout. Only URIs that are registered here will be accepted as a location by Reapit Connect although, you can register multiple locations with a comma separated list.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="redirectUris"
            placeholder="Enter your Redirect URI(s)"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Redirect URI(s)
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="signoutUris"
            placeholder="Enter your Sign Out URI(s)"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Sign Out URI(s)
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the general tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e20pb60-el-grid"
      >
        <div
          class="eb3z2eu-el-col-split"
        >
          <svg
            class="e1ffzzrg-el-mb10"
            height="140px"
            id="erekCw3TbW21"
            shape-rendering="geometricPrecision"
            text-rendering="geometricPrecision"
            viewBox="0 0 140 140"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M92.6107,118.751c0-1.914-1.5509-3.465-3.4638-3.465h-1.4623v-33.5396c-1.7976,0-3.4989-.5863-4.9148-1.5746-.952.6711-2.0477,1.167-3.2624,1.4081-.5556.111-1.1226.1665-1.683.1665-.3736,0-.7323-.05-1.0958-.0975l-16.1458-.3054c-.7856.2352-1.6028.4017-2.4654.4017-.8602,0-1.6764-.1663-2.4631-.4017l-16.1458.3056c-.362.0475-.7233.0974-1.0966.0974-.5569,0-1.1218-.0555-1.6889-.1676-1.2112-.2411-2.3048-.7359-3.2578-1.407-1.4159.9882-3.1138,1.5746-4.9101,1.5746L28.554,115.286h-1.4625c-1.9142,0-3.4648,1.551-3.4648,3.465c0,1.915,1.5506,3.465,3.4648,3.465h62.0553c1.913,0,3.4639-1.551,3.4639-3.465Z"
              fill="#262f69"
            />
            <path
              d="M17.0043,88.7831c.6344.2019,1.2751.2981,1.9065.2981c2.8655,0,5.5122-1.9881,6.3746-5.0665l.35-1.2468c.237,2.2638,1.4787,4.2584,3.3362,5.3748.5994.3551,1.2384.6484,1.948.7984.4388.0949.8761.1401,1.3058.1401c3.1114,0,5.8929-2.3353,6.5213-5.7121l.1623-.8651c.1665,2.4069,1.4602,4.5272,3.3835,5.6728.7722.4613,1.6409.7659,2.5797.8672.2245.0259.4478.0359.6679.0359c3.3779,0,6.2723-2.7314,6.6161-6.3919l.0491-.5264c.8894,10.6514,13.8828,8.0692,13.8828.3424l.1623.8651c.6313,3.3783,3.411,5.7121,6.5212,5.7121.4311,0,.8669-.0454,1.3074-.1401.7061-.15,1.3484-.4433,1.9449-.7984c1.8607-1.1166,3.1023-3.111,3.3394-5.3748l.3499,1.2468c.8626,3.0784,3.5092,5.0665,6.376,5.0665.6302,0,1.2708-.0962,1.9052-.2981c3.5245-1.1215,5.5274-5.0748,4.4756-8.8279L86.7774,59.651C85.5881,55.4075,81.926,52.5,77.7718,52.5h-50.5431c-4.1561,0-7.818,2.9075-9.0075,7.151L12.53,79.9552c-1.0518,3.7533.9514,7.7066,4.4743,8.8279Z"
              fill="#31448f"
            />
            <rect
              fill="#f2f2f2"
              height="10.5"
              rx="1"
              ry="1"
              transform="translate(36.75 94.5)"
              width="15.75"
            />
            <rect
              fill="#f2f2f2"
              height="10.5"
              rx="1"
              ry="1"
              transform="translate(63 94.5)"
              width="15.75"
            />
            <g
              id="manage-app-listing-one"
              transform="translate(39.12742,25.990749)"
            >
              <path
                d="M64.5593,22.0386c-.9453-5.879-6.2367-10.3914-12.613-10.3914-2.3987,0-4.7048.6384-6.706,1.829C42.2069,8.55954,36.7363,5.5,30.6533,5.5c-9.3971,0-17.0546,7.3539-17.0694,16.3926-.0001.056-.0002.1141.0018.1701-6.04098.9785-10.80557,6.0431-10.81556,12.1243C2.759,40.9666,8.62547,46.4815,15.6738,46.4815h46.8668c7.0484,0,12.9329-5.5149,12.9441-12.2945.0101-6.1331-4.8148-11.2298-10.9254-12.1484v0Z"
                fill="#f2f2f2"
                transform="translate(-39.12742,-25.990749)"
              />
            </g>
            <path
              d="M121.209,133.349h-50.2457c-.001,0-.0019,0-.0029,0-4.2515-.012-7.6987-3.459-7.7103-7.711v-105.9911c.0116-4.2518,3.4591-7.6993,7.7109-7.7109h50.251c4.251.0116,7.699,3.4588,7.711,7.7103c0,.001,0,.0019,0,.0029v105.9888c0,.001,0,.001,0,.002-.015,4.253-3.459,7.697-7.711,7.709-.001,0-.002,0-.003,0Z"
              fill="#7bc9eb"
              stroke="#262f69"
              stroke-width="4"
            />
            <path
              d="M121.214,135.349h-50.2556c-5.3544-.013-9.6952-4.354-9.7083-9.708v-12.297c32.0121,0,41.1849,0,69.6729,0v12.3c-.017,5.354-4.354,9.692-9.709,9.705Z"
              fill="#31448f"
            />
            <rect
              fill="#fff"
              height="38.5"
              rx="19.25"
              ry="19.25"
              transform="translate(73.5001 26.25)"
              width="38.5"
            />
            <rect
              fill="#f2f2f2"
              height="15.6767"
              rx="1"
              ry="1"
              transform="translate(73.7937 85.5774)"
              width="43.8946"
            />
            <rect
              fill="#f2f2f2"
              height="6.27067"
              rx="1"
              ry="1"
              transform="translate(73.7937 75.25)"
              width="31.3533"
            />
            <circle
              fill="#fff"
              r="18.375"
              transform="translate(63.875 51.625)"
            />
            <g
              id="manage-app-listing-two"
              transform="translate(60.5,53.5) rotate(0)"
            >
              <g
                id="manage-app-listing-three"
                transform="scale(1,1)"
              >
                <path
                  d="M57.3649,25c-.8426,0-1.6097.3968-2.1056.9476s-.7714,1.2255-.9028,1.9198v.001l-.8431,4.4579c-1.0435.3462-2.058.7685-3.0393,1.264l-3.7543-2.5598c-.5836-.3978-1.2549-.6809-1.9954-.7199-.7411-.039-1.5636.2249-2.1587.82l-4.4328,4.4329c-.5961.5956-.8585,1.4185-.8204,2.1587.038.7405.3206,1.4132.7184,1.9978l2.5486,3.738c-.4945.9866-.9144,2.0059-1.2577,3.0542l-4.4535.8431c-.6943.1315-1.3698.4069-1.9207.9029-.5508.4959-.9476,1.2644-.9476,2.1071v6.2688c0,.8427.3963,1.6098.9476,2.1057.5509.496,1.2264.7724,1.9207.9038l4.4608.8451c.3462,1.0425.7675,2.0561,1.263,3.0364l-2.5606,3.7544c-.3982.5841-.6804,1.2568-.7184,1.9974-.0381.7405.2239,1.563.8205,2.1586l4.4327,4.4329c.5957.5961,1.4181.8576,2.1587.819.7405-.039,1.4122-.3211,1.9963-.7193l3.7379-2.5482c.9866.4945,2.0064.9134,3.0551,1.2572l.8432,4.4535c.1314.6944.4068,1.3699.9028,1.9208.4959.5509,1.263.9476,2.1056.9476L63.6361,82c.8426,0,1.6097-.3963,2.1056-.9476.496-.5509.7714-1.226.9029-1.9198v-.0015l.8441-4.4573c1.0434-.3463,2.0579-.7685,3.0392-1.264l3.7534,2.5588c.584.3982,1.2562.6804,1.9962.7194.7406.039,1.5636-.223,2.1597-.8191l4.4327-4.4329c.5957-.5961.8581-1.4195.8191-2.1596-.0385-.7406-.3212-1.4123-.7199-1.9964l-2.5486-3.738c.4945-.9866.9144-2.0059,1.2577-3.0547l4.4535-.8431c.6943-.1315,1.3698-.4079,1.9207-.9038.5509-.496.9476-1.263.9476-2.1057v-6.2693c0-.8426-.3963-1.6106-.9476-2.1071-.5509-.496-1.2259-.7714-1.9198-.9029l-4.4587-.8441c-.3462-1.043-.7685-2.0566-1.264-3.0375L82.9696,39.72c.3982-.5841.6809-1.2563.7199-1.9964.039-.7406-.2239-1.564-.8205-2.1596l-4.4318-4.4329c-.5961-.5956-1.419-.859-2.1596-.82-.7401.039-1.4118.3221-1.9955.7198l-3.7379,2.5487c-.9866-.494-2.0064-.9134-3.0551-1.2572l-.8441-4.4545c-.1315-.6944-.4069-1.3686-.9029-1.9198-.4959-.5509-1.2629-.9476-2.1056-.9476L57.3649,25Zm3.1352,17.7026c5.9756,0,10.7954,4.8209,10.7954,10.7966c0,5.9752-4.82,10.7961-10.7954,10.7966-5.9756,0-10.7964-4.8209-10.7964-10.7966c0-5.9761,4.8208-10.7966,10.7964-10.7966Z"
                  fill="#ffb71b"
                  transform="translate(-60.5,-53.5)"
                />
              </g>
            </g>
          </svg>
          <h2
            class="e15ggth7-el-subtitle"
          >
            Manage App Listing
          </h2>
          <p
            class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
          >
            This page is the starting point for completing your app listing, and initiating the approvals process for your app to go live with customer data.
          </p>
          <p
            class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
          >
            As an app developer, you need to provide us with a number of pieces of information about your integration and have it approved by our team, prior to going live with customer data. For apps that wish to integrate with the AgencyCloud CRM, and be publicly listed in the AppMarket, the approvals process is more involved than for simple server-side or single customer private apps. Regardless of your target audience, you should start to complete your app listing as soon as possible.
          </p>
          <p
            class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
          >
            You can check the status of your app listing at any time by using the button below, prior to submitting for approval.
          </p>
          <button
            class="epibvz0-el-intent-secondary eqfkc7t-el-button"
          >
            Check Status
          </button>
        </div>
        <div
          class="eb3z2eu-el-col-split"
        >
          <svg
            class="e1ffzzrg-el-mb10"
            height="140px"
            id="e7CDlwhB8m51"
            shape-rendering="geometricPrecision"
            text-rendering="geometricPrecision"
            viewBox="0 0 140 140"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#e7CDlwhB8m525)"
            >
              <g>
                <g
                  id="app-listing-docs-one"
                  transform="translate(69.99835,61.58215)"
                >
                  <path
                    d="M119.024,61.4515L69.9983,44.21L20.9727,61.4515L69.9983,78.9543L119.024,61.4515Z"
                    fill="#23a4de"
                    transform="translate(-69.99835,-61.58215)"
                  />
                </g>
                <g
                  id="app-listing-docs-two"
                  transform="translate(94.509052,61.58215)"
                >
                  <path
                    d="M119.022,61.4515L69.9961,44.21v34.7443L119.022,61.4515Z"
                    fill="#0061a8"
                    transform="translate(-94.509052,-61.58215)"
                  />
                </g>
                <g
                  transform="translate(.000001 0)"
                >
                  <g
                    transform="translate(.000001 0)"
                  >
                    <path
                      d="M88.5528,8.83691h-38.2352c-3.7098,0-6.7278,3.07939-6.7278,6.86359v82.1929c0,3.7846,3.018,6.8636,6.7278,6.8636h38.2352c3.7098,0,6.7286-3.079,6.7286-6.8636v-82.1929c0-3.7842-3.0188-6.86359-6.7286-6.86359v0Z"
                      fill="#262f69"
                    />
                    <path
                      d="M88.529,12.8105h-5.6823c-.5361,0-.9703.4429-.9703.9889c0,1.3117-1.0515,2.3843-2.3365,2.3843h-20.2552c-1.2859,0-2.3374-1.0726-2.3374-2.3843c0-.546-.4341-.9889-.9703-.9889h-5.6823c-1.5652,0-2.8338,1.2941-2.8338,2.8898v64.8486h43.9019v-64.8486c0-1.5957-1.2686-2.8898-2.8338-2.8898Z"
                      fill="#fff"
                    />
                  </g>
                  <g
                    transform="translate(0 0.000001)"
                  >
                    <path
                      d="M50.8828,45.4146l18.576-18.2154l18.576,18.2154v25.1546h-37.152v-25.1546Z"
                      fill="#262f69"
                    />
                    <path
                      d="M50.8828,45.4146l18.576-18.2154l18.576,18.2154v14.3121L50.8828,45.4146Z"
                      fill="#7bc9eb"
                    />
                    <path
                      d="M88.036,70.5692h-10.8737L61.7578,34.7519L69.46,27.1992L88.036,45.4146v25.1546Z"
                      fill="#0061a8"
                    />
                    <path
                      d="M88.036,45.4146v14.3121L69.46,52.6606L61.7578,34.7519L69.46,27.1992L88.036,45.4146Z"
                      fill="#32bcfa"
                    />
                  </g>
                </g>
                <g
                  id="app-listing-docs-three"
                  transform="translate(69.649327,82.061558)"
                >
                  <g
                    transform="translate(-69.649326,-79.061558)"
                  >
                    <path
                      d="M70.011522,75.96449c-.190118.78125-.061612,3.42125,0,5.28l3.903961-3.524822-3.903961-1.755178Z"
                      fill="#262f69"
                      stroke-width="0.28"
                      transform="translate(.000001 0.000003)"
                    />
                    <path
                      d="M69.992961,76.053166l-.017109,5.286723l3.95674-3.620221-3.939631-1.666502Z"
                      fill="#31448f"
                      stroke-width="0.28"
                      transform="matrix(-1.168966 0 0-1.168966 151.807857 171.062202)"
                    />
                  </g>
                </g>
                <path
                  d="M69.9983,79.0023L20.9727,61.4512v63.1168l49.0256,15.777v-61.3427Z"
                  fill="#31448f"
                />
                <path
                  d="M119.022,124.568v-63.1168L69.9961,79.0023v61.3427l49.0259-15.777Z"
                  fill="#262f69"
                />
                <g
                  id="app-listing-docs-four"
                  transform="translate(36.9986,80.849051)"
                >
                  <path
                    d="M20.9715,61.4521L4,81.8288L53.9483,100.246L69.9972,78.955L20.9715,61.4521Z"
                    fill="#7bc9eb"
                    transform="translate(-36.9986,-80.849051)"
                  />
                </g>
                <g
                  id="app-listing-docs-five"
                  transform="translate(102.997547,80.848101)"
                >
                  <path
                    d="M119.022,61.4512l16.977,20.3766L86.0506,100.245L69.9961,78.954L119.022,61.4512Z"
                    fill="#23a4de"
                    transform="translate(-102.997547,-80.848101)"
                  />
                </g>
                <g
                  id="app-listing-docs-six"
                  transform="translate(89.264528,45.746041)"
                >
                  <g
                    id="app-listing-docs-seven"
                    transform="rotate(-67.423922)"
                  >
                    <g
                      id="app-listing-docs-eight"
                      transform="skewX(-1.018603) skewY(0) scale(1,0.999842)"
                    >
                      <rect
                        fill="#ffe5c7"
                        height="12.724"
                        rx="3"
                        ry="3"
                        transform="translate(-6.34105,-6.362)"
                        width="12.6821"
                      />
                    </g>
                  </g>
                </g>
                <g
                  class="o1em0cms-offset-style-one"
                  id="app-listing-docs-nine"
                >
                  <g
                    id="app-listing-docs-ten"
                    transform="rotate(-25.945515)"
                  >
                    <g
                      id="app-listing-docs-eleven"
                      transform="skewX(0.740377) skewY(0) scale(0.999999,0.999917)"
                    >
                      <rect
                        fill="#ffb71b"
                        height="25.3778"
                        rx="5"
                        ry="5"
                        transform="translate(-12.60465,-12.6889)"
                        width="25.2093"
                      />
                    </g>
                  </g>
                </g>
                <g
                  class="o1juy2tl-offset-style-two"
                  id="app-listing-docs-twelve"
                >
                  <g
                    id="app-listing-docs-thirteen"
                    transform="rotate(18.101295)"
                  >
                    <g
                      id="app-listing-docs-fourteen"
                      transform="skewX(0.486255) skewY(0) scale(1,0.999964)"
                    >
                      <rect
                        fill="#ffe5c7"
                        height="9.95171"
                        rx="2"
                        ry="2"
                        transform="translate(-4.91747,-4.975855)"
                        width="9.83494"
                      />
                    </g>
                  </g>
                </g>
              </g>
              <clippath
                id="e7CDlwhB8m525"
              >
                <rect
                  fill="#fff"
                  height="140"
                  rx="0"
                  ry="0"
                  width="140"
                />
              </clippath>
            </g>
          </svg>
          <h2
            class="e15ggth7-el-subtitle"
          >
            App Listing Documentation
          </h2>
          <p
            class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
          >
            As you make changes, you should save your changes in the left hand side menu. You can do this as many times as you like until your app is listed, or live in the AppMarket.
          </p>
          <p
            class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
          >
            When you are ready for your app to be reviewed by a member of our team, click the ‘Submit Review’ button. If you are looking for guidance on what we look for when reviewing app, there is a dedicated page 
            <a>
              here.
            </a>
          </p>
          <p
            class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
          >
            When your app is live, you will need to create revisions to your app for our team to review. You can only have one live revision outstanding at any given time.
          </p>
          <p
            class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
          >
            For guidelines on completing your app listing, visit the documentation link below before getting started.
          </p>
          <button
            class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
          >
            View Docs
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e20pb60-el-grid"
    >
      <div
        class="eb3z2eu-el-col-split"
      >
        <svg
          class="e1ffzzrg-el-mb10"
          height="140px"
          id="erekCw3TbW21"
          shape-rendering="geometricPrecision"
          text-rendering="geometricPrecision"
          viewBox="0 0 140 140"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M92.6107,118.751c0-1.914-1.5509-3.465-3.4638-3.465h-1.4623v-33.5396c-1.7976,0-3.4989-.5863-4.9148-1.5746-.952.6711-2.0477,1.167-3.2624,1.4081-.5556.111-1.1226.1665-1.683.1665-.3736,0-.7323-.05-1.0958-.0975l-16.1458-.3054c-.7856.2352-1.6028.4017-2.4654.4017-.8602,0-1.6764-.1663-2.4631-.4017l-16.1458.3056c-.362.0475-.7233.0974-1.0966.0974-.5569,0-1.1218-.0555-1.6889-.1676-1.2112-.2411-2.3048-.7359-3.2578-1.407-1.4159.9882-3.1138,1.5746-4.9101,1.5746L28.554,115.286h-1.4625c-1.9142,0-3.4648,1.551-3.4648,3.465c0,1.915,1.5506,3.465,3.4648,3.465h62.0553c1.913,0,3.4639-1.551,3.4639-3.465Z"
            fill="#262f69"
          />
          <path
            d="M17.0043,88.7831c.6344.2019,1.2751.2981,1.9065.2981c2.8655,0,5.5122-1.9881,6.3746-5.0665l.35-1.2468c.237,2.2638,1.4787,4.2584,3.3362,5.3748.5994.3551,1.2384.6484,1.948.7984.4388.0949.8761.1401,1.3058.1401c3.1114,0,5.8929-2.3353,6.5213-5.7121l.1623-.8651c.1665,2.4069,1.4602,4.5272,3.3835,5.6728.7722.4613,1.6409.7659,2.5797.8672.2245.0259.4478.0359.6679.0359c3.3779,0,6.2723-2.7314,6.6161-6.3919l.0491-.5264c.8894,10.6514,13.8828,8.0692,13.8828.3424l.1623.8651c.6313,3.3783,3.411,5.7121,6.5212,5.7121.4311,0,.8669-.0454,1.3074-.1401.7061-.15,1.3484-.4433,1.9449-.7984c1.8607-1.1166,3.1023-3.111,3.3394-5.3748l.3499,1.2468c.8626,3.0784,3.5092,5.0665,6.376,5.0665.6302,0,1.2708-.0962,1.9052-.2981c3.5245-1.1215,5.5274-5.0748,4.4756-8.8279L86.7774,59.651C85.5881,55.4075,81.926,52.5,77.7718,52.5h-50.5431c-4.1561,0-7.818,2.9075-9.0075,7.151L12.53,79.9552c-1.0518,3.7533.9514,7.7066,4.4743,8.8279Z"
            fill="#31448f"
          />
          <rect
            fill="#f2f2f2"
            height="10.5"
            rx="1"
            ry="1"
            transform="translate(36.75 94.5)"
            width="15.75"
          />
          <rect
            fill="#f2f2f2"
            height="10.5"
            rx="1"
            ry="1"
            transform="translate(63 94.5)"
            width="15.75"
          />
          <g
            id="manage-app-listing-one"
            transform="translate(39.12742,25.990749)"
          >
            <path
              d="M64.5593,22.0386c-.9453-5.879-6.2367-10.3914-12.613-10.3914-2.3987,0-4.7048.6384-6.706,1.829C42.2069,8.55954,36.7363,5.5,30.6533,5.5c-9.3971,0-17.0546,7.3539-17.0694,16.3926-.0001.056-.0002.1141.0018.1701-6.04098.9785-10.80557,6.0431-10.81556,12.1243C2.759,40.9666,8.62547,46.4815,15.6738,46.4815h46.8668c7.0484,0,12.9329-5.5149,12.9441-12.2945.0101-6.1331-4.8148-11.2298-10.9254-12.1484v0Z"
              fill="#f2f2f2"
              transform="translate(-39.12742,-25.990749)"
            />
          </g>
          <path
            d="M121.209,133.349h-50.2457c-.001,0-.0019,0-.0029,0-4.2515-.012-7.6987-3.459-7.7103-7.711v-105.9911c.0116-4.2518,3.4591-7.6993,7.7109-7.7109h50.251c4.251.0116,7.699,3.4588,7.711,7.7103c0,.001,0,.0019,0,.0029v105.9888c0,.001,0,.001,0,.002-.015,4.253-3.459,7.697-7.711,7.709-.001,0-.002,0-.003,0Z"
            fill="#7bc9eb"
            stroke="#262f69"
            stroke-width="4"
          />
          <path
            d="M121.214,135.349h-50.2556c-5.3544-.013-9.6952-4.354-9.7083-9.708v-12.297c32.0121,0,41.1849,0,69.6729,0v12.3c-.017,5.354-4.354,9.692-9.709,9.705Z"
            fill="#31448f"
          />
          <rect
            fill="#fff"
            height="38.5"
            rx="19.25"
            ry="19.25"
            transform="translate(73.5001 26.25)"
            width="38.5"
          />
          <rect
            fill="#f2f2f2"
            height="15.6767"
            rx="1"
            ry="1"
            transform="translate(73.7937 85.5774)"
            width="43.8946"
          />
          <rect
            fill="#f2f2f2"
            height="6.27067"
            rx="1"
            ry="1"
            transform="translate(73.7937 75.25)"
            width="31.3533"
          />
          <circle
            fill="#fff"
            r="18.375"
            transform="translate(63.875 51.625)"
          />
          <g
            id="manage-app-listing-two"
            transform="translate(60.5,53.5) rotate(0)"
          >
            <g
              id="manage-app-listing-three"
              transform="scale(1,1)"
            >
              <path
                d="M57.3649,25c-.8426,0-1.6097.3968-2.1056.9476s-.7714,1.2255-.9028,1.9198v.001l-.8431,4.4579c-1.0435.3462-2.058.7685-3.0393,1.264l-3.7543-2.5598c-.5836-.3978-1.2549-.6809-1.9954-.7199-.7411-.039-1.5636.2249-2.1587.82l-4.4328,4.4329c-.5961.5956-.8585,1.4185-.8204,2.1587.038.7405.3206,1.4132.7184,1.9978l2.5486,3.738c-.4945.9866-.9144,2.0059-1.2577,3.0542l-4.4535.8431c-.6943.1315-1.3698.4069-1.9207.9029-.5508.4959-.9476,1.2644-.9476,2.1071v6.2688c0,.8427.3963,1.6098.9476,2.1057.5509.496,1.2264.7724,1.9207.9038l4.4608.8451c.3462,1.0425.7675,2.0561,1.263,3.0364l-2.5606,3.7544c-.3982.5841-.6804,1.2568-.7184,1.9974-.0381.7405.2239,1.563.8205,2.1586l4.4327,4.4329c.5957.5961,1.4181.8576,2.1587.819.7405-.039,1.4122-.3211,1.9963-.7193l3.7379-2.5482c.9866.4945,2.0064.9134,3.0551,1.2572l.8432,4.4535c.1314.6944.4068,1.3699.9028,1.9208.4959.5509,1.263.9476,2.1056.9476L63.6361,82c.8426,0,1.6097-.3963,2.1056-.9476.496-.5509.7714-1.226.9029-1.9198v-.0015l.8441-4.4573c1.0434-.3463,2.0579-.7685,3.0392-1.264l3.7534,2.5588c.584.3982,1.2562.6804,1.9962.7194.7406.039,1.5636-.223,2.1597-.8191l4.4327-4.4329c.5957-.5961.8581-1.4195.8191-2.1596-.0385-.7406-.3212-1.4123-.7199-1.9964l-2.5486-3.738c.4945-.9866.9144-2.0059,1.2577-3.0547l4.4535-.8431c.6943-.1315,1.3698-.4079,1.9207-.9038.5509-.496.9476-1.263.9476-2.1057v-6.2693c0-.8426-.3963-1.6106-.9476-2.1071-.5509-.496-1.2259-.7714-1.9198-.9029l-4.4587-.8441c-.3462-1.043-.7685-2.0566-1.264-3.0375L82.9696,39.72c.3982-.5841.6809-1.2563.7199-1.9964.039-.7406-.2239-1.564-.8205-2.1596l-4.4318-4.4329c-.5961-.5956-1.419-.859-2.1596-.82-.7401.039-1.4118.3221-1.9955.7198l-3.7379,2.5487c-.9866-.494-2.0064-.9134-3.0551-1.2572l-.8441-4.4545c-.1315-.6944-.4069-1.3686-.9029-1.9198-.4959-.5509-1.2629-.9476-2.1056-.9476L57.3649,25Zm3.1352,17.7026c5.9756,0,10.7954,4.8209,10.7954,10.7966c0,5.9752-4.82,10.7961-10.7954,10.7966-5.9756,0-10.7964-4.8209-10.7964-10.7966c0-5.9761,4.8208-10.7966,10.7964-10.7966Z"
                fill="#ffb71b"
                transform="translate(-60.5,-53.5)"
              />
            </g>
          </g>
        </svg>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Manage App Listing
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
        >
          This page is the starting point for completing your app listing, and initiating the approvals process for your app to go live with customer data.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
        >
          As an app developer, you need to provide us with a number of pieces of information about your integration and have it approved by our team, prior to going live with customer data. For apps that wish to integrate with the AgencyCloud CRM, and be publicly listed in the AppMarket, the approvals process is more involved than for simple server-side or single customer private apps. Regardless of your target audience, you should start to complete your app listing as soon as possible.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
        >
          You can check the status of your app listing at any time by using the button below, prior to submitting for approval.
        </p>
        <button
          class="epibvz0-el-intent-secondary eqfkc7t-el-button"
        >
          Check Status
        </button>
      </div>
      <div
        class="eb3z2eu-el-col-split"
      >
        <svg
          class="e1ffzzrg-el-mb10"
          height="140px"
          id="e7CDlwhB8m51"
          shape-rendering="geometricPrecision"
          text-rendering="geometricPrecision"
          viewBox="0 0 140 140"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#e7CDlwhB8m525)"
          >
            <g>
              <g
                id="app-listing-docs-one"
                transform="translate(69.99835,61.58215)"
              >
                <path
                  d="M119.024,61.4515L69.9983,44.21L20.9727,61.4515L69.9983,78.9543L119.024,61.4515Z"
                  fill="#23a4de"
                  transform="translate(-69.99835,-61.58215)"
                />
              </g>
              <g
                id="app-listing-docs-two"
                transform="translate(94.509052,61.58215)"
              >
                <path
                  d="M119.022,61.4515L69.9961,44.21v34.7443L119.022,61.4515Z"
                  fill="#0061a8"
                  transform="translate(-94.509052,-61.58215)"
                />
              </g>
              <g
                transform="translate(.000001 0)"
              >
                <g
                  transform="translate(.000001 0)"
                >
                  <path
                    d="M88.5528,8.83691h-38.2352c-3.7098,0-6.7278,3.07939-6.7278,6.86359v82.1929c0,3.7846,3.018,6.8636,6.7278,6.8636h38.2352c3.7098,0,6.7286-3.079,6.7286-6.8636v-82.1929c0-3.7842-3.0188-6.86359-6.7286-6.86359v0Z"
                    fill="#262f69"
                  />
                  <path
                    d="M88.529,12.8105h-5.6823c-.5361,0-.9703.4429-.9703.9889c0,1.3117-1.0515,2.3843-2.3365,2.3843h-20.2552c-1.2859,0-2.3374-1.0726-2.3374-2.3843c0-.546-.4341-.9889-.9703-.9889h-5.6823c-1.5652,0-2.8338,1.2941-2.8338,2.8898v64.8486h43.9019v-64.8486c0-1.5957-1.2686-2.8898-2.8338-2.8898Z"
                    fill="#fff"
                  />
                </g>
                <g
                  transform="translate(0 0.000001)"
                >
                  <path
                    d="M50.8828,45.4146l18.576-18.2154l18.576,18.2154v25.1546h-37.152v-25.1546Z"
                    fill="#262f69"
                  />
                  <path
                    d="M50.8828,45.4146l18.576-18.2154l18.576,18.2154v14.3121L50.8828,45.4146Z"
                    fill="#7bc9eb"
                  />
                  <path
                    d="M88.036,70.5692h-10.8737L61.7578,34.7519L69.46,27.1992L88.036,45.4146v25.1546Z"
                    fill="#0061a8"
                  />
                  <path
                    d="M88.036,45.4146v14.3121L69.46,52.6606L61.7578,34.7519L69.46,27.1992L88.036,45.4146Z"
                    fill="#32bcfa"
                  />
                </g>
              </g>
              <g
                id="app-listing-docs-three"
                transform="translate(69.649327,82.061558)"
              >
                <g
                  transform="translate(-69.649326,-79.061558)"
                >
                  <path
                    d="M70.011522,75.96449c-.190118.78125-.061612,3.42125,0,5.28l3.903961-3.524822-3.903961-1.755178Z"
                    fill="#262f69"
                    stroke-width="0.28"
                    transform="translate(.000001 0.000003)"
                  />
                  <path
                    d="M69.992961,76.053166l-.017109,5.286723l3.95674-3.620221-3.939631-1.666502Z"
                    fill="#31448f"
                    stroke-width="0.28"
                    transform="matrix(-1.168966 0 0-1.168966 151.807857 171.062202)"
                  />
                </g>
              </g>
              <path
                d="M69.9983,79.0023L20.9727,61.4512v63.1168l49.0256,15.777v-61.3427Z"
                fill="#31448f"
              />
              <path
                d="M119.022,124.568v-63.1168L69.9961,79.0023v61.3427l49.0259-15.777Z"
                fill="#262f69"
              />
              <g
                id="app-listing-docs-four"
                transform="translate(36.9986,80.849051)"
              >
                <path
                  d="M20.9715,61.4521L4,81.8288L53.9483,100.246L69.9972,78.955L20.9715,61.4521Z"
                  fill="#7bc9eb"
                  transform="translate(-36.9986,-80.849051)"
                />
              </g>
              <g
                id="app-listing-docs-five"
                transform="translate(102.997547,80.848101)"
              >
                <path
                  d="M119.022,61.4512l16.977,20.3766L86.0506,100.245L69.9961,78.954L119.022,61.4512Z"
                  fill="#23a4de"
                  transform="translate(-102.997547,-80.848101)"
                />
              </g>
              <g
                id="app-listing-docs-six"
                transform="translate(89.264528,45.746041)"
              >
                <g
                  id="app-listing-docs-seven"
                  transform="rotate(-67.423922)"
                >
                  <g
                    id="app-listing-docs-eight"
                    transform="skewX(-1.018603) skewY(0) scale(1,0.999842)"
                  >
                    <rect
                      fill="#ffe5c7"
                      height="12.724"
                      rx="3"
                      ry="3"
                      transform="translate(-6.34105,-6.362)"
                      width="12.6821"
                    />
                  </g>
                </g>
              </g>
              <g
                class="o1em0cms-offset-style-one"
                id="app-listing-docs-nine"
              >
                <g
                  id="app-listing-docs-ten"
                  transform="rotate(-25.945515)"
                >
                  <g
                    id="app-listing-docs-eleven"
                    transform="skewX(0.740377) skewY(0) scale(0.999999,0.999917)"
                  >
                    <rect
                      fill="#ffb71b"
                      height="25.3778"
                      rx="5"
                      ry="5"
                      transform="translate(-12.60465,-12.6889)"
                      width="25.2093"
                    />
                  </g>
                </g>
              </g>
              <g
                class="o1juy2tl-offset-style-two"
                id="app-listing-docs-twelve"
              >
                <g
                  id="app-listing-docs-thirteen"
                  transform="rotate(18.101295)"
                >
                  <g
                    id="app-listing-docs-fourteen"
                    transform="skewX(0.486255) skewY(0) scale(1,0.999964)"
                  >
                    <rect
                      fill="#ffe5c7"
                      height="9.95171"
                      rx="2"
                      ry="2"
                      transform="translate(-4.91747,-4.975855)"
                      width="9.83494"
                    />
                  </g>
                </g>
              </g>
            </g>
            <clippath
              id="e7CDlwhB8m525"
            >
              <rect
                fill="#fff"
                height="140"
                rx="0"
                ry="0"
                width="140"
              />
            </clippath>
          </g>
        </svg>
        <h2
          class="e15ggth7-el-subtitle"
        >
          App Listing Documentation
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
        >
          As you make changes, you should save your changes in the left hand side menu. You can do this as many times as you like until your app is listed, or live in the AppMarket.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
        >
          When you are ready for your app to be reviewed by a member of our team, click the ‘Submit Review’ button. If you are looking for guidance on what we look for when reviewing app, there is a dedicated page 
          <a>
            here.
          </a>
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
        >
          When your app is live, you will need to create revisions to your app for our team to review. You can only have one live revision outstanding at any given time.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
        >
          For guidelines on completing your app listing, visit the documentation link below before getting started.
        </p>
        <button
          class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
        >
          View Docs
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the permissions tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
         
        <a
          href="/swagger"
          rel="noopener noreferrer"
          target="_blank"
        >
          API explorer here
           
        </a>
        before proceeding, to investigate which permissions you think you will need.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
         
        <a>
           please see here.
        </a>
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Private App
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-private-app"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-private-app"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="ee8eqmp-el-input-wrap-med"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              disabled=""
              id="test-static-id"
              name="limitToClientIds"
              placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Private App Client Ids
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
       
      <a
        href="/swagger"
        rel="noopener noreferrer"
        target="_blank"
      >
        API explorer here
         
      </a>
      before proceeding, to investigate which permissions you think you will need.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
       
      <a>
         please see here.
      </a>
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Private App
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-private-app"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-private-app"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="ee8eqmp-el-input-wrap-med"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            disabled=""
            id="test-static-id"
            name="limitToClientIds"
            placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Private App Client Ids
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
